trunk/cslc/test/csl/field_invalid/field_invalid3.csl
//Petronela
csl_enum e {
  RD,
  WR,
  EN
};
csl_field f{  
  f(){
  set_enum(e);
  set_range(3);//error 
  }
};

